# ROS_highBW

./: CMakeLists.txt  README.md  failur_document.txt  package.xml
arduino/: failure_document.txt
arduino/innerLoop_tesla1/: innerLoop_tesla1.ino
arduino/inner_loop/: inner_loop.ino
arduino/inner_loop_tesla1/: innerLoop_tesla1.ino
arduino/inner_loop_vw_PID/: inner_loop_vw_PID.ino
arduino/inner_loop_vw_PID_failurecase/: inner_loop_vw_PID_failurecase.ino
launch/: Cruise1.csv  ground_station_innerLoop.launch
launch/Cartesian_data/: Cart_1v.csv  Cart_2v.csv  Cart_R.m  Cart_v.m  Cartesian_05r.csv  Cartesian_2r.csv  arduino_05r.csv  arduino_1v.csv  arduino_2r.csv  arduino_2v.csv
launch/Cruise_data/: Cruise_r.m  Cruise_v.m  Cruise_v.m~  arduino_175r.csv  arduino_C_1_8.csv  arduino_r05.csv  cruiseData_175r.csv  cruiseData_C_refv.csv  cruiseData_r05.csv  cruise_r.eps  cruise_v.eps  waypoint.mat  waypoint2.mat  waypoint3.mat
launch/Multi/: arduino_BWd.csv  arduino_BWk.csv  arduino_rd.csv  arduino_rk.csv  arduino_vd.csv  multi_bw.m  (+9 more)
matlab/: inneLoop_design.m  innerLoop_main.m  modelplot.m
src/: .~lock.Cruise.csv#  Cartesian.cpp  Cartesian1.csv  Cartesian2.csv  Cartesian_05r.csv  Cartesian_18v.csv  Cartesian_1v.csv  Cartesian_2r.csv  Cruise.cpp  Cruise.csv  Cruise2.csv  Cruise4.csv  Cruise_05r.csv  Cruise_2r.csv  ground_station_data_receive_Vive.cpp  ground_station_data_receive_Vive_and _innerLoop_systemID.cpp  ground_station_data_receive_Vive_failureCase.cpp  ground_station_innerLoop.cpp  ground_station_innerLoop_failureCase.cpp  robot_3_data_send.cpp  tesla1.cpp
(+62 files in other folders)
